feature: add recipe DTOs and separate API models from entities